# camera-reel-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  justfile
.github/workflows/: build.yml  clippy-checks.yml  docker-latest.yml  manual-deploy.yml  tests.yml
docs/: ai-agent-context.md  api.md  database-schemas.md
examples/: upload-image.rs
localstack/: 01-create-sns.sh  02-create-s3.sh
migrations/: 20230703174228_initial-schema.sql  20230718172639_add-thumbnail-url.sql  20241108114116_add-is-public.sql  20241112155757_add-is-public-index.sql  20241120104619_add-place-id-index.sql  20241128115656_add-place-id-is-public-index.sql  20250415084648_alter_place_id_is_public_idx_to_contemplate_sorting.sql  20250428115657_fix-place-id-is-public-index.sql  20250606095254_alter_place_id_is_public_idx_to_contemplate_sorting.sql
src/: api.rs  auth.rs  database.rs  lib.rs  main.rs  places_client.rs  sns.rs
src/api/: auth.rs  delete.rs  docs.rs  get.rs  middlewares.rs  update.rs  upload.rs
tests/: api.rs
tests/common/: mod.rs
tests/resources/: metadata.json
