[package]
name = "camera-reel-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# async 
async-stream = "0.3"

# actix
actix-web = "4"
actix-multipart-extract = "0.1"
actix-web-lab = "0.19"

# database
sqlx = { version = "0.6", features = [
  "runtime-actix-native-tls",
  "postgres",
  "uuid",
  "json",
  "chrono",
] }

# aws
rust-s3 = "0.33"

# image
image = "0.24"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# metadata
serde = { version = "1.0", features = ["derive"] }

# misc
clap = { version = "4", features = ["env", "derive"] }
thiserror = "1.0"
